# ahclib

./: .gitignore  CLAUDE.md  README.md  README.rst  a.md  a.sh  a_pyproject.toml  gomi_pyproject.toml  pyproject.toml  requirements.txt  setup.py
_docs/: conf.py  index.rst
_docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
ahclib/: __main__.py  ahc_settings.py  ahc_util.py  main.py  memo.md  optimizer.py  parallel_tester.py  vis.py  vis_beam.py  vis_runner.py
ahclib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ahclib/assets/: beam_custom.css  custom.css  style.css
ahclib/beam/: app.py  config.py  data.py  default_visualizer.py  sample_history.json  speedup.md
ahclib/vis/: app.py  callbacks.py  config.py  data.py  figures.py  layout.py  tabs.py
ahctools/: __main__.py  ahc_settings.py  optimizer.py  parallel_tester.py
ahctools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ahctools/ahctools/: __main__.py  parallel_tester.py
ahctools/ahctools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
work/: a.cpp  a.py  analysis.txt  beam_config.py  beam_data.py  beam_search.cpp  cpp_expander.py  history.json  ida.cpp  main.cpp  makefile  memo.txt  out.txt  vis_beam.py  visualizer.py
work/assets/: beam_custom.css
work/in/: 0000.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  (+86 more)
(+4 files in other folders)
